@@ -5,6 +5,7 @@ import warnings
 
 from django.test import TestCase
 
+from wagtail.tests.search import models
 from wagtail.utils.deprecation import RemovedInWagtail18Warning
 
 from .test_backends import BackendTests
@@ -20,6 +21,13 @@ class TestDBBackend(BackendTests, TestCase):
     @unittest.expectedFailure
     def test_update_index_command(self):
         super(TestDBBackend, self).test_update_index_command()
+
+    def test_annotate_score(self):
+        results = self.backend.search("Hello", models.SearchTest).annotate_score('_score')
+
+        for result in results:
+            # DB backend doesn't do scoring, so annotate_score should just add None
+            self.assertIsNone(result._score)
 
 
 class TestOldNameDeprecationWarning(TestCase):
